welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: not found: value color
def faireV(c:Color) {setCouleurBrosse(color.YELLOW);avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();gauche()}
                                      ^MethodsPicture:29: error: not found: value transition2
  for (compteur5 <- 1 to 3) {motif2() ; transition2()}
                                        ^